--- a/src/common/guide/Guide.scss
+++ b/src/common/guide/Guide.scss
@@ -8,9 +8,9 @@
         border-radius: 4px;
         height: 40px;
         line-height: 40px;
-        font-weight: var(--tiklab-font-weight-bold);
+        font-weight: var(--thoughtware-font-weight-bold);
         .xcode-guide-title-icon{
-            font-size: var(--tiklab-icon-size-16);
+            font-size: var(--thoughtware-icon-size-16);
         }
         .xcode-guide-title-name{
             padding: 0 8px;
@@ -20,6 +20,6 @@
         border-radius: 3px;
         cursor: pointer;
         font-size: 16px;
-        color: var(--tiklab-blue);
+        color: var(--thoughtware-blue);
     }
 }
