--- a/src/repository/commits/components/Commits.scss
+++ b/src/repository/commits/components/Commits.scss
@@ -5,7 +5,7 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        margin: var(--tiklab-padding-item) 0;
+        margin: var(--thoughtware-padding-item) 0;
         .commits-head-left{
             flex: 1;
             display: flex;
@@ -17,7 +17,7 @@
             flex-direction: row;
             align-items: center;
             .commits-user{
-                margin-right: var(--tiklab-padding-item);
+                margin-right: var(--thoughtware-padding-item);
             }
         }
     }
@@ -27,7 +27,7 @@
                 background: #f7f7f7;
                 border-bottom: 1px solid #f0f0f0;
                 font-size: 14px;
-                padding: 6px var(--tiklab-padding-item);
+                padding: 6px var(--thoughtware-padding-item);
                 font-weight: 500;
                 .title-time{
                     padding-right: 5px;
@@ -38,15 +38,15 @@
                     display: flex;
                     flex-direction: row;
                     align-items: center;
-                    padding: 8px var(--tiklab-padding-item);
+                    padding: 8px var(--thoughtware-padding-item);
                     .msg-item-icon{
-                        margin-right: var(--tiklab-padding-item);
+                        margin-right: var(--thoughtware-padding-item);
                     }
                     .msg-item-msg{
-                        margin-right: var(--tiklab-padding-item);
+                        margin-right: var(--thoughtware-padding-item);
                         flex: 1;
                         .msg-item-title{
-                            font-weight: var(--tiklab-font-weight-bold);
+                            font-weight: var(--thoughtware-font-weight-bold);
                             .title-commitMsg:hover{
                                 cursor: pointer;
                                 text-decoration: underline;
@@ -54,7 +54,7 @@
                         }
                         .msg-item-desc{
                             font-size: 13px;
-                            color: var(--tiklab-gray-500);
+                            color: var(--thoughtware-gray-500);
                             .desc-user{
                                 padding-right: 5px;
                             }
