--- a/src/repository/detection/components/SonarQube.scss
+++ b/src/repository/detection/components/SonarQube.scss
@@ -39,7 +39,7 @@
                 .sonar-tables-name{
                     flex: 1;
                     .name-text-name{
-                        font-weight: var(--tiklab-font-weight-bold);
+                        font-weight: var(--thoughtware-font-weight-bold);
                         margin-right: 8px;
                         cursor: pointer;
                         display: inline-block;
@@ -67,8 +67,8 @@
                         font-weight: 400;
                     }
                     .name-text-desc{
-                        color: var(--tiklab-gray-500);
-                        font-size: var(--tiklab-font-13);
+                        color: var(--thoughtware-gray-500);
+                        font-size: var(--thoughtware-font-13);
                         .desc-name{
                             margin-right: 8px;
                         }
@@ -178,11 +178,11 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        font-weight: var(--tiklab-font-weight-bold);
-        padding: var(--tiklab-padding) var(--tiklab-padding) var(--tiklab-padding-item);
+        font-weight: var(--thoughtware-font-weight-bold);
+        padding: var(--thoughtware-padding) var(--thoughtware-padding) var(--thoughtware-padding-item);
     }
     .sonar-add-content{
-        padding: 0 var(--tiklab-padding);
+        padding: 0 var(--thoughtware-padding);
         max-height:calc(100% - 120px);
         overflow:auto;
     }
