--- a/src/repository/repository/components/RepositoryUser.scss
+++ b/src/repository/repository/components/RepositoryUser.scss
@@ -1,5 +1,5 @@
 .repository-add-user{
-    padding-bottom: var(--tiklab-padding-item);
+    padding-bottom: var(--thoughtware-padding-item);
     .repository-add-user-title{
         display: flex;
         justify-content: space-between;
