--- a/src/repository/setting/accessKeys/components/AccessKeys.scss
+++ b/src/repository/setting/accessKeys/components/AccessKeys.scss
@@ -6,10 +6,10 @@
         align-items: center;
     }
     &-illustrate{
-        margin: var(--tiklab-padding-item) 0;
+        margin: var(--thoughtware-padding-item) 0;
         padding: 10px;
         background: #F8FFFF;
-        color: var(--tiklab-blue);
+        color: var(--thoughtware-blue);
         border: 1px solid #e3e9ed;
         &>div:not(:last-child){
             padding-bottom: 10px;
@@ -23,11 +23,11 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        font-weight: var(--tiklab-font-weight-bold);
-        padding: var(--tiklab-padding) var(--tiklab-padding) var(--tiklab-padding-item);
+        font-weight: var(--thoughtware-font-weight-bold);
+        padding: var(--thoughtware-padding) var(--thoughtware-padding) var(--thoughtware-padding-item);
     }
     .keys-add-content{
-        padding: 0 var(--tiklab-padding);
+        padding: 0 var(--thoughtware-padding);
         max-height:calc(100% - 120px);
         overflow:auto;
     }
