--- a/src/repository/statistics/components/Statistics.scss
+++ b/src/repository/statistics/components/Statistics.scss
@@ -7,10 +7,10 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        margin: var(--tiklab-padding-item) 0;
+        margin: var(--thoughtware-padding-item) 0;
         .head-item{
             flex: 1;
-            padding: 0 var(--tiklab-padding-item);
+            padding: 0 var(--thoughtware-padding-item);
             background: #ffffff;
             border-radius: 4px;
             .head-item-content{
@@ -22,7 +22,7 @@
                 min-width: 100px;
             }
             &:not(:last-child){
-                margin-right: var(--tiklab-padding-item);
+                margin-right: var(--thoughtware-padding-item);
             }
         }
     }
@@ -46,13 +46,13 @@
                 .title-user-name{
                     .num{
                         font-size: 13px;
-                        color: var(--tiklab-gray-500);
+                        color: var(--thoughtware-gray-500);
                     }
                 }
             }
             .title-branch{
                 font-size: 13px;
-                color: var(--tiklab-gray-500);
+                color: var(--thoughtware-gray-500);
             }
         }
     }
