--- a/src/repository/tag/components/Tag.scss
+++ b/src/repository/tag/components/Tag.scss
@@ -87,14 +87,14 @@
             .name-text{
                 flex: 1;
                 .name-text-title{
-                    font-weight: var(--tiklab-font-weight-bold);
+                    font-weight: var(--thoughtware-font-weight-bold);
                     &:hover{
                         text-decoration: underline;
                     }
                 }
                 .name-text-desc{
-                    color: var(--tiklab-gray-500);
-                    font-size: var(--tiklab-font-13);
+                    color: var(--thoughtware-gray-500);
+                    font-size: var(--thoughtware-font-13);
                     .desc-name{
                         margin-right: 8px;
                     }
@@ -124,11 +124,11 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        font-weight: var(--tiklab-font-weight-bold);
-        padding: var(--tiklab-padding) var(--tiklab-padding) var(--tiklab-padding-item);
+        font-weight: var(--thoughtware-font-weight-bold);
+        padding: var(--thoughtware-padding) var(--thoughtware-padding) var(--thoughtware-padding-item);
     }
     .tag-add-content{
-        padding: 0 var(--tiklab-padding);
+        padding: 0 var(--thoughtware-padding);
         max-height:calc(100% - 120px);
         overflow:auto;
     }
@@ -140,11 +140,11 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        font-weight: var(--tiklab-font-weight-bold);
-        padding: var(--tiklab-padding) var(--tiklab-padding) var(--tiklab-padding-item);
+        font-weight: var(--thoughtware-font-weight-bold);
+        padding: var(--thoughtware-padding) var(--thoughtware-padding) var(--thoughtware-padding-item);
     }
     .publish-add-content{
-        padding: 0 var(--tiklab-padding);
+        padding: 0 var(--thoughtware-padding);
         max-height:calc(100% - 120px);
         overflow:auto;
     }
