--- a/src/setting/navigator/SettingContent.scss
+++ b/src/setting/navigator/SettingContent.scss
@@ -13,7 +13,7 @@
             text-align: center;
             padding-top: 10px;
             height: 45px;
-            border-top: 1px solid var(--tiklab-gray-200);
+            border-top: 1px solid var(--thoughtware-gray-200);
             cursor: pointer;
         }
         &-top{
@@ -39,10 +39,10 @@
             cursor: pointer;
         }
         .system-aside-first:hover {
-            background: var(--tiklab-gray-300);
+            background: var(--thoughtware-gray-300);
         }
         .system-aside-second:hover{
-            background: var(--tiklab-gray-300);
+            background: var(--thoughtware-gray-300);
         }
 
         &-li {
@@ -52,8 +52,8 @@
             padding: 0;
         }
         &-select {
-            background: var(--tiklab-gray-400);
-            border-left: 3px solid var(--tiklab-blue);
+            background: var(--thoughtware-gray-400);
+            border-left: 3px solid var(--thoughtware-blue);
         }
     }
     &-content{
@@ -62,7 +62,7 @@
         overflow: auto;
     }
     .sys-content-icon{
-        font-size: var(--tiklab-icon-size-16);
+        font-size: var(--thoughtware-icon-size-16);
         padding-right: 5px;
     }
 }
