--- a/src/setting/scan/components/ScanSchemeRule.scss
+++ b/src/setting/scan/components/ScanSchemeRule.scss
@@ -3,7 +3,7 @@
   max-width: 1280px;
   min-width: 508px;
   margin: 0 auto;
-  padding: var(--tiklab-padding);
+  padding: var(--thoughtware-padding);
   overflow: auto;
 
   .data-title-desc {
