--- a/src/common/btn/Btn.scss
+++ b/src/common/btn/Btn.scss
@@ -13,8 +13,8 @@
 }
 
 .xcode-btn-primary{
-    background: var(--tiklab-blue);
-    border-color: var(--tiklab-blue);
+    background: var(--thoughtware-blue);
+    border-color: var(--thoughtware-blue);
     color: #ffffff;
 }
 
@@ -29,7 +29,7 @@
     background: transparent;
     border-color: transparent;
     padding: 0;
-    font-size: var(--tiklab-font-13);
+    font-size: var(--thoughtware-font-13);
 }
 
 .xcode-btn-dangerous{
@@ -44,7 +44,7 @@
 }
 
 .xcode-btn-link{
-    color: var(--tiklab-blue);
+    color: var(--thoughtware-blue);
     background: transparent;
     border-color: transparent;
     box-shadow: none;
@@ -69,5 +69,5 @@
     display: inline-block;
     width: 16px;
     height: 16px;
-    font-size: var(--tiklab-icon-size-16);
+    font-size: var(--thoughtware-icon-size-16);
 }
