--- a/src/common/list/Listicon.scss
+++ b/src/common/list/Listicon.scss
@@ -5,9 +5,9 @@
 
 .xcode-listname-icon{
     display: inline-block;
-    width: var(--tiklab-icon-size-32);
-    height: var(--tiklab-icon-size-32);
-    line-height: var(--tiklab-icon-size-32);
+    width: var(--thoughtware-icon-size-32);
+    height: var(--thoughtware-icon-size-32);
+    line-height: var(--thoughtware-icon-size-32);
     margin-right: 10px;
     border-radius: 4px;
     text-align: center;
@@ -32,5 +32,5 @@
     background: #f3e5f5;
 }
 .xcode-listname-name{
-    color: var(--tiklab-blue);
+    color: var(--thoughtware-blue);
 }
