--- a/src/common/loading/Loading.scss
+++ b/src/common/loading/Loading.scss
@@ -17,7 +17,7 @@
 .xcode-shape  {
     width: 16px;
     height: 16px;
-    background-color: var(--tiklab-blue);
+    background-color: var(--thoughtware-blue);
     border-radius: 100%;
     display: inline-block;
     margin-left: 10px;
