--- a/src/common/modal/Modal.scss
+++ b/src/common/modal/Modal.scss
@@ -4,14 +4,14 @@
         justify-content: space-between;
         align-items: center;
         margin-bottom: 10px;
-        padding: var(--tiklab-padding) var(--tiklab-padding) 0;
+        padding: var(--thoughtware-padding) var(--thoughtware-padding) 0;
         &>div:first-child{
             font-size: 15px;
-            font-weight: var(--tiklab-font-weight-bold);
+            font-weight: var(--thoughtware-font-weight-bold);
         }
     }
     .xcode-modal-content{
-        padding: 0 var(--tiklab-padding);
+        padding: 0 var(--thoughtware-padding);
         max-height:calc(100% - 120px);
         overflow:auto;
     }
