--- a/src/common/styles/Index.scss
+++ b/src/common/styles/Index.scss
@@ -33,19 +33,19 @@ ul li{
 }
 
 .xcode .ant-steps-item-process>.ant-steps-item-container>.ant-steps-item-icon{
-    background-color: var(--tiklab-blue);
+    background-color: var(--thoughtware-blue);
 }
 
 .xcode .ant-steps-item-finish .ant-steps-item-icon{
-    border-color: var(--tiklab-blue);
+    border-color: var(--thoughtware-blue);
 }
 
 .xcode .ant-steps-item-finish .ant-steps-finish-icon{
-    color: var(--tiklab-blue);
+    color: var(--thoughtware-blue);
 }
 
 .xcode .ant-steps-item-finish>.ant-steps-item-container>.ant-steps-item-content>.ant-steps-item-title:after{
-    background-color: var(--tiklab-blue);
+    background-color: var(--thoughtware-blue);
 }
 
 .xcode .ant-table-thead>tr>th{
@@ -135,20 +135,20 @@ ul li{
     margin: auto;
     max-width: 75%;
     min-width: 1000px;
-    padding: var(--tiklab-padding);
+    padding: var(--thoughtware-padding);
 }
 
 .xcode-repository-width{
     margin: auto;
     max-width: 75%;
     min-width: 1080px;
-    padding: var(--tiklab-padding);
+    padding: var(--thoughtware-padding);
 }
 .xcode-repository-width-setting{
     margin: auto;
     max-width: 1280px;
     min-width: 980px;
-    padding: var(--tiklab-padding);
+    padding: var(--thoughtware-padding);
 }
 
 ::-webkit-scrollbar {
@@ -170,36 +170,36 @@ ul li{
 }
 
 :root {
-    --tiklab-white: #fff;   /* 主色调白*/
-    --tiklab-black: #000;   /*主色调黑 */
-    --tiklab-blue: #5D70EA;   /* 主色调蓝*/
-    --tiklab-gree: #4cbb17 ;   /* 主色调蓝*/
-    --tiklab-gray-200: #ececec;  /*border 的边线 */
-    --tiklab-gray-300: #EDF0F5;  /*hover颜色 */
-    --tiklab-gray-400: #e3e8f0;  /*左侧导航 选中颜色 */
-    --tiklab-gray-500: #999; /* 文字次级颜色灰色调*/
-    --tiklab-gray: #f7f8fa;  /* 主色调灰 左侧导航*/
+    --thoughtware-white: #fff;   /* 主色调白*/
+    --thoughtware-black: #000;   /*主色调黑 */
+    --thoughtware-blue: #5D70EA;   /* 主色调蓝*/
+    --thoughtware-gree: #4cbb17 ;   /* 主色调蓝*/
+    --thoughtware-gray-200: #ececec;  /*border 的边线 */
+    --thoughtware-gray-300: #EDF0F5;  /*hover颜色 */
+    --thoughtware-gray-400: #e3e8f0;  /*左侧导航 选中颜色 */
+    --thoughtware-gray-500: #999; /* 文字次级颜色灰色调*/
+    --thoughtware-gray: #f7f8fa;  /* 主色调灰 左侧导航*/
 
-    --tiklab-padding: 20px;  /*页面边距 */
-    --tiklab-padding-resove: -20px; /* 页面边距*/
-    --tiklab-padding-item: 15px;  /*元素间隔边距 */
-    --tiklab-padding-resove-item:-15px;  /*元素间隔边距 */
+    --thoughtware-padding: 20px;  /*页面边距 */
+    --thoughtware-padding-resove: -20px; /* 页面边距*/
+    --thoughtware-padding-item: 15px;  /*元素间隔边距 */
+    --thoughtware-padding-resove-item:-15px;  /*元素间隔边距 */
 
-    --tiklab-font-12: 12px;  /*图文排需要的文字 */
-    --tiklab-font-13: 13px;  /*描述文字 */
-    --tiklab-font-14: 14px; /*正文 */
-    --tiklab-font-15: 13px;  /* 2级标题*/
-    --tiklab-font-16: 16px;  /*标题 */
+    --thoughtware-font-12: 12px;  /*图文排需要的文字 */
+    --thoughtware-font-13: 13px;  /*描述文字 */
+    --thoughtware-font-14: 14px; /*正文 */
+    --thoughtware-font-15: 13px;  /* 2级标题*/
+    --thoughtware-font-16: 16px;  /*标题 */
 
-    --tiklab-font-weight-bold: bold;  /*标题字重 */
+    --thoughtware-font-weight-bold: bold;  /*标题字重 */
 
     /* 图标大小 */
-    --tiklab-icon-size-16: 16px;
-    --tiklab-icon-size-20: 20px;
-    --tiklab-icon-size-22: 22px;
-    --tiklab-icon-size-25: 25px;
-    --tiklab-icon-size-32: 32px;
-    --tiklab-icon-size-45: 45px;
+    --thoughtware-icon-size-16: 16px;
+    --thoughtware-icon-size-20: 20px;
+    --thoughtware-icon-size-22: 22px;
+    --thoughtware-icon-size-25: 25px;
+    --thoughtware-icon-size-32: 32px;
+    --thoughtware-icon-size-45: 45px;
 
     --xcode-sider-color: #efefef;
     --xcode-select-color: #e3e8f0;
