--- a/src/home/components/Portal.scss
+++ b/src/home/components/Portal.scss
@@ -9,7 +9,7 @@
         min-width: 600px;
         height: var(--xcode-head-height);
         border-bottom: 1px solid #e9e9e9;
-        /*background: var(--tiklab-blue);*/
+        /*background: var(--thoughtware-blue);*/
         &-logo{
             gap: 10px;
             display: flex;
@@ -52,12 +52,12 @@
             }
         }
         &-icon{
-            font-size: var(--tiklab-icon-size-22);
+            font-size: var(--thoughtware-icon-size-22);
           /*  color: #ffffff;*/
         }
         &-icon-ban{
             color: #94979a;
-            font-size: var(--tiklab-icon-size-22);
+            font-size: var(--thoughtware-icon-size-22);
         }
         &-user{
             cursor: pointer;
@@ -82,7 +82,7 @@
                     line-height: 48px;
                     padding: 0 10px;
                     &:not(:last-child){
-                        margin-right: var(--tiklab-padding-item);
+                        margin-right: var(--thoughtware-padding-item);
                     }
                 }
             }
@@ -102,7 +102,7 @@
     border-radius: 4px;
     background: #ffffff;
     .header-dropdown-icon{
-        font-size: var(--tiklab-icon-size-16);
+        font-size: var(--thoughtware-icon-size-16);
         padding-right: 10px;
     }
 }
