--- a/src/merge/components/MergeDetails.scss
+++ b/src/merge/components/MergeDetails.scss
@@ -5,7 +5,7 @@
         align-items: center;
         justify-content: space-between;
         .mergeDetails-head-left{
-            margin: var(--tiklab-padding-item) 0;
+            margin: var(--thoughtware-padding-item) 0;
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -31,13 +31,13 @@
                 margin-right: 10px;
             }
             .head-left-user{
-                color: var(--tiklab-blue);
+                color: var(--thoughtware-blue);
                 cursor: pointer;
             }
         }
     }
     &-log{
-        padding: var(--tiklab-padding-item);
+        padding: var(--thoughtware-padding-item);
         .mergeDetails-log-title{
             display: -webkit-box;
             display: -webkit-flex;
@@ -65,7 +65,7 @@
                     }
                     .right-time{
                         font-size: 13px;
-                        color: var(--tiklab-gray-500);
+                        color: var(--thoughtware-gray-500);
                     }
                 }
                 .right-desc{
@@ -77,7 +77,7 @@
                     outline: none;
                     cursor: pointer;
                     border-radius: 4px;
-                    margin-bottom: var(--tiklab-padding-item);
+                    margin-bottom: var(--thoughtware-padding-item);
                     margin-top: 10px;
                     .right-desc-btn{
                         margin-top: 10px;
@@ -95,7 +95,7 @@
         }
         .log-left{
             width: 40px;
-            padding-right: var(--tiklab-padding-item);
+            padding-right: var(--thoughtware-padding-item);
             display: -webkit-box;
             display: -webkit-flex;
             display: -ms-flexbox;
@@ -136,7 +136,7 @@
                         display: flex;
                         flex-direction: row;
                         align-items: center;
-                        padding-bottom: var(--tiklab-padding-item);
+                        padding-bottom: var(--thoughtware-padding-item);
                         .desc-user-title{
                             flex: 1;
                             display: flex;
@@ -149,12 +149,12 @@
                     }
                     .desc-time{
                         font-size: 13px;
-                        color: var(--tiklab-gray-500);
+                        color: var(--thoughtware-gray-500);
                     }
                 }
                 .log-comment{
                     border: 1px solid #e5e5e5;
-                    margin-bottom: var(--tiklab-padding-item);
+                    margin-bottom: var(--thoughtware-padding-item);
                 }
                 .log-right-node{
                     padding: 8px;
@@ -211,12 +211,12 @@
                                 }
                                 .reply-user-time{
                                     font-size: 12px;
-                                    color: var(--tiklab-gray-500);
+                                    color: var(--thoughtware-gray-500);
                                     padding: 0 5px;
                                 }
                                 .reply-user-reply{
                                     font-size: 12px;
-                                    color: var(--tiklab-gray-500);
+                                    color: var(--thoughtware-gray-500);
                                     opacity: 0;
                                 }
                             }
@@ -259,7 +259,7 @@
                 border-top: 1px solid #f0f0f0;
                 border-top: 1px solid var(--gray-02,#f0f0f0);
                 .view-user{
-                    padding-right: var(--tiklab-padding-item);
+                    padding-right: var(--thoughtware-padding-item);
                 }
                 .view-input{
                     flex: 1;
