--- a/src/repository/detection/components/EnvDeployAdd.scss
+++ b/src/repository/detection/components/EnvDeployAdd.scss
@@ -4,11 +4,11 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    font-weight: var(--tiklab-font-weight-bold);
-    padding: var(--tiklab-padding) var(--tiklab-padding) var(--tiklab-padding-item);
+    font-weight: var(--thoughtware-font-weight-bold);
+    padding: var(--thoughtware-padding) var(--thoughtware-padding) var(--thoughtware-padding-item);
   }
   .dev-deploy-add-content{
-    padding: 0 var(--tiklab-padding);
+    padding: 0 var(--thoughtware-padding);
     overflow:auto;
   }
 }
