--- a/src/repository/detection/components/InfoSetting.scss
+++ b/src/repository/detection/components/InfoSetting.scss
@@ -1,7 +1,7 @@
 .info-setting-type{
   display: flex;
   .info-setting-title{
-    font-size: var(--tiklab-font-13);;
+    font-size: var(--thoughtware-font-13);;
     cursor: pointer;
     height: 50px;
     line-height: 50px;
