--- a/src/repository/file/components/Edit.scss
+++ b/src/repository/file/components/Edit.scss
@@ -3,12 +3,12 @@
         display: flex;
         flex-direction: column;
         &-head{
-            margin: var(--tiklab-padding-item) 0;
+            margin: var(--thoughtware-padding-item) 0;
             font-size: 13px;
-            font-weight: var(--tiklab-font-weight-bold);
+            font-weight: var(--thoughtware-font-weight-bold);
         }
         &-title{
-            margin-bottom: var(--tiklab-padding-item);
+            margin-bottom: var(--thoughtware-padding-item);
             .edit-title{
                 &:not(:last-child){
                     margin-right: 10px;
@@ -27,13 +27,13 @@
                 padding: 8px 16px;
                 .editor-title-compile{
                     cursor: pointer;
-                    margin-right: var(--tiklab-padding-item);
+                    margin-right: var(--thoughtware-padding-item);
                 }
                 .editor-title-preview{
                     cursor: pointer;
                 }
                 .editor-title-active{
-                    color: var(--tiklab-blue);
+                    color: var(--thoughtware-blue);
                 }
             }
             .edit-editor-content{
@@ -44,7 +44,7 @@
             }
         }
         &-msg{
-            margin-top: var(--tiklab-padding-item);
+            margin-top: var(--thoughtware-padding-item);
         }
         &-btn{
             margin-top: 5px;
