--- a/src/repository/repository/components/Repository.scss
+++ b/src/repository/repository/components/Repository.scss
@@ -23,7 +23,7 @@
         .name-text{
             flex: 1;
             .name-text-name{
-                font-weight: var(--tiklab-font-weight-bold);
+                font-weight: var(--thoughtware-font-weight-bold);
                 &:hover{
                     text-decoration: underline;
                 }
@@ -42,8 +42,8 @@
                 font-weight: 400;
             }
             .name-text-desc{
-                color: var(--tiklab-gray-500);
-                font-size: var(--tiklab-font-13);
+                color: var(--thoughtware-gray-500);
+                font-size: var(--thoughtware-font-13);
             }
         }
         .repository-tables-set{
@@ -52,7 +52,7 @@
                 font-size: 16px;
             }
             &:hover{
-                color: var(--tiklab-blue);
+                color: var(--thoughtware-blue);
             }
         }
         .repository-tables-collect{
