--- a/src/repository/setting/pushRule/components/PushRule.scss
+++ b/src/repository/setting/pushRule/components/PushRule.scss
@@ -1,9 +1,9 @@
 .push-rule{
     &-mode{
-        margin: var(--tiklab-padding-item) 0;
+        margin: var(--thoughtware-padding-item) 0;
         .mode-title{
             font-size: 13px;
-            font-weight: var(--tiklab-font-weight-bold);
+            font-weight: var(--thoughtware-font-weight-bold);
         }
         .mode-swith{
             display: flex;
