--- a/src/repository/setting/webHooks/components/Hooks.scss
+++ b/src/repository/setting/webHooks/components/Hooks.scss
@@ -6,10 +6,10 @@
         align-items: center;
     }
     &-illustrate{
-        margin: var(--tiklab-padding-item) 0;
+        margin: var(--thoughtware-padding-item) 0;
         padding: 10px;
         background: #F8FFFF;
-        color: var(--tiklab-blue);
+        color: var(--thoughtware-blue);
         border: 1px solid #e3e9ed;
         &>div:not(:last-child){
             padding-bottom: 10px;
@@ -23,11 +23,11 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        font-weight: var(--tiklab-font-weight-bold);
-        padding: var(--tiklab-padding) var(--tiklab-padding) var(--tiklab-padding-item);
+        font-weight: var(--thoughtware-font-weight-bold);
+        padding: var(--thoughtware-padding) var(--thoughtware-padding) var(--thoughtware-padding-item);
     }
     .hooks-add-content{
-        padding: 0 var(--tiklab-padding);
+        padding: 0 var(--thoughtware-padding);
         max-height:calc(100% - 120px);
         overflow:auto;
         .event-check{
@@ -37,16 +37,16 @@
                 min-width: 100px;
             }
             .event-check-desc{
-                color: var(--tiklab-gray-500);
+                color: var(--thoughtware-gray-500);
 
             }
         }
         .activate{
             .activate-title{
-                font-weight: var(--tiklab-font-weight-bold);
+                font-weight: var(--thoughtware-font-weight-bold);
             }
             .activate-desc{
-                color: var(--tiklab-gray-500);
+                color: var(--thoughtware-gray-500);
             }
         }
     }
