--- a/src/repositoryGroup/setting/basicInfo/GroupBasicInfo.scss
+++ b/src/repositoryGroup/setting/basicInfo/GroupBasicInfo.scss
@@ -1,6 +1,6 @@
 .groupSetting{
     .groupSetting-up{
-        padding-bottom: var(--tiklab-padding-item);
+        padding-bottom: var(--thoughtware-padding-item);
     }
     &-ul{
         border: 1px solid #ececec;
@@ -8,7 +8,7 @@
     }
     &-li{
         &:not(:last-child){
-            border-bottom: 1px solid var(--tiklab-gray-200);
+            border-bottom: 1px solid var(--thoughtware-gray-200);
         }
         .groupSetting-li-top{
             display: flex;
@@ -25,17 +25,17 @@
             line-height: 16px;
             margin-right: 10px;
             margin-top: 4px;
-            font-weight: var(--tiklab-font-weight-bold);
+            font-weight: var(--thoughtware-font-weight-bold);
         }
         .groupSetting-li-center{
             flex-grow: 1;
         }
         .groupSetting-li-title{
-            font-weight: var(--tiklab-font-weight-bold);
+            font-weight: var(--thoughtware-font-weight-bold);
         }
         .groupSetting-li-desc{
-            font-size: var(--tiklab-font-13);
-            color: var(--tiklab-gray-500);
+            font-size: var(--thoughtware-font-13);
+            color: var(--thoughtware-gray-500);
         }
         .groupSetting-li-down{
             align-self: center;
