--- a/src/setting/auth/components/Auth.scss
+++ b/src/setting/auth/components/Auth.scss
@@ -6,26 +6,26 @@
         align-items: center;
     }
     .sys-keys-ill{
-        margin: var(--tiklab-padding-item) 0;
+        margin: var(--thoughtware-padding-item) 0;
         padding: 10px;
         background: #F8FFFF;
-        color: var(--tiklab-blue);
+        color: var(--thoughtware-blue);
         border: 1px solid #e3e9ed;
     }
     .sys-keys-table-title{
-        color: var(--tiklab-blue);
+        color: var(--thoughtware-blue);
         cursor: pointer;
     }
 }
 
 .sys-keys-detail{
     .keys-detail-title{
-        padding-top: var(--tiklab-padding-item);
-        font-weight: var(--tiklab-font-weight-bold);
+        padding-top: var(--thoughtware-padding-item);
+        font-weight: var(--thoughtware-font-weight-bold);
     }
     .keys-detail-time{
-        padding: var(--tiklab-padding-item) 0;
-        color: var(--tiklab-gray-500);
+        padding: var(--thoughtware-padding-item) 0;
+        color: var(--thoughtware-gray-500);
     }
 }
 
