--- a/src/setting/deploy/components/EnvDeploy.scss
+++ b/src/setting/deploy/components/EnvDeploy.scss
@@ -9,14 +9,14 @@
     padding-top: var(---xcode-table-top);
   }
   .dev-deploy-ill{
-    margin: var(--tiklab-padding-item) 0;
+    margin: var(--thoughtware-padding-item) 0;
     padding: 10px;
     background: #F8FFFF;
-    color: var(--tiklab-blue);
+    color: var(--thoughtware-blue);
     border: 1px solid #e3e9ed;
   }
   .dev-deploy-table-title{
-    color: var(--tiklab-blue);
+    color: var(--thoughtware-blue);
     cursor: pointer;
   }
 }
@@ -26,11 +26,11 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    font-weight: var(--tiklab-font-weight-bold);
-    padding: var(--tiklab-padding) var(--tiklab-padding) var(--tiklab-padding-item);
+    font-weight: var(--thoughtware-font-weight-bold);
+    padding: var(--thoughtware-padding) var(--thoughtware-padding) var(--thoughtware-padding-item);
   }
   .dev-deploy-add-content{
-    padding: 0 var(--tiklab-padding);
+    padding: 0 var(--thoughtware-padding);
     overflow:auto;
   }
 }
