--- a/src/setting/repository/components/UserList.scss
+++ b/src/setting/repository/components/UserList.scss
@@ -10,7 +10,7 @@
     .name-text{
       flex: 1;
       .name-text-name{
-        font-weight: var(--tiklab-font-weight-bold);
+        font-weight: var(--thoughtware-font-weight-bold);
         &:hover{
           text-decoration: underline;
         }
@@ -21,8 +21,8 @@
         font-size: 15px;
       }
       .name-text-desc{
-        color: var(--tiklab-gray-500);
-        font-size: var(--tiklab-font-13);
+        color: var(--thoughtware-gray-500);
+        font-size: var(--thoughtware-font-13);
       }
     }
   }
